# Fullstack_RAG

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/: app.py  qdrant.py  rag.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  QuestionForm.js
