[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
langchain = "^0.2.1"
qdrant-client = "^1.9.1"
python-decouple = "^3.8"
openai = "^1.30.5"
langchain-community = "^0.2.1"
langchain-qdrant = "^0.1.0"
beautifulsoup4 = "^4.12.3"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
